src/modules/tournaments/components/tournament/components/tournament-banner/styles/themes/_default.scss
.wlc-tournament-banner--theme-default:host {
    position: relative;
    height: ef.get-value($themeDefault, 'baseHeight');
}

.wlc-tournament-banner {
    position: relative;

    max-width: ef.get-value($themeDefault, 'tournamentMaxWidth');
    height: ef.get-value($themeDefault, 'baseHeight');

    border-radius: ef.get-value($themeDefault, 'tournamentRadius');

    background-color: ef.get-value($themeDefault, 'tournamentBg');
    background-repeat: no-repeat;
    background-size: cover;

    overflow: hidden;

    &:before {
        @include bm.get-mq-map('background', $themeDefault, 'tournamentGradient');

        content: '';

        position: absolute;
        top: ef.get-value($themeDefault, 'tournamentBeforePosition');
        right: ef.get-value($themeDefault, 'tournamentBeforePosition');
        bottom: ef.get-value($themeDefault, 'tournamentBeforePosition');
        left: ef.get-value($themeDefault, 'tournamentBeforePosition');
        z-index: ef.get-value($themeDefault, 'tournamentBeforeZIndex');
    }

    &__tag {
        @include text.get-text-style('ThirdTitleBold', ef.get-value($themeDefault, 'tagColor'));
        @include bm.get-mq-map('padding', $themeDefault, 'tagPadding');

        position: absolute;
        top: ef.get-value($themeDefault, 'tagTopPosition');
        left: ef.get-value($themeDefault, 'tagLeftPosition');
        z-index: 10;

        min-width: ef.get-value($themeDefault, 'tagMinWidth');
        text-align: ef.get-value($themeDefault, 'tagTextAlign');
        background: ef.get-value($themeDefault, 'tagBg');
        border-radius: ef.get-value($themeDefault, 'tagBorderRadius');
    }

    &__status {
        @include text.get-text-style(ef.get-value($themeDefault, 'statusTagFontStyle'), ef.get-value($themeDefault, 'statusTagColor'));
        @include bm.get-mq-map('right', $themeDefault, 'statusTagRightPos');
        position: absolute;
        top: ef.get-value($themeDefault, 'statusTagTopPos');
        z-index: 10;

        padding: ef.get-value($themeDefault, 'statusTagTextPadding');
        background: ef.get-value($themeDefault, 'statusTagTextBackground');
        border-radius: ef.get-value($themeDefault, 'statusTagTextBorderRadius');

        &.active {
            color: ef.get-value($themeDefault, 'statusTagColorActive');
            background: ef.get-value($themeDefault, 'statusTagActiveBackground');
        }
    }

    &__more-icon {
        @include bm.get-mq-map('display', $themeDefault, 'moreIconDisplay');
        @include bm.get-mq-map('top', $themeDefault, 'moreIconPosTop');
        @include bm.get-mq-map('right', $themeDefault, 'moreIconPosRight');

        position: absolute;
        z-index: 3;
        color: ef.get-value($themeDefault, 'moreIconColor');
        line-height: 1;

        .icon-btn {
            width: ef.get-value($themeDefault, 'moreIconSize');
            height: ef.get-value($themeDefault, 'moreIconSize');

            cursor: pointer;

            &::ng-deep {

                svg {
                    fill: currentColor;
                }
            }
        }

        @include bm.hover {
            color: ef.get-value($themeDefault, 'moreIconColorHover');
        }
    }

    &__body {
        @include bm.get-mq-map('padding', $themeDefault, 'bodyPadding');

        position: relative;
        z-index: ef.get-value($themeDefault, 'bodyZIndex');
        display: flex;
        flex-direction: ef.get-value($themeDefault, 'bodyFlexDirection');
        align-items: ef.get-value($themeDefault, 'bodyAlignItems');

        height: ef.get-value($themeDefault, 'baseHeight');

        > *:not(.wlc-tournament-banner__body-decor) {
            position: relative;
            z-index: ef.get-value($themeDefault, 'bodyNestedZIindex');
        }

        &-decor {
            @include bm.get-mq-map('display', $themeDefault, 'bodyDecorDisplay');
            @include bm.get-mq-map('background-position', $themeDefault, 'bodyBgPosition');
            @include bm.get-mq-map('background-size', $themeDefault, 'bodyBgSize');

            position: absolute;
            top: ef.get-value($themeDefault, 'bodyDecorPositionTop');
            right: ef.get-value($themeDefault, 'bodyDecorPositionRight');
            bottom: ef.get-value($themeDefault, 'bodyDecorPositionBottom');
            z-index: ef.get-value($themeDefault, 'bodyDecorZIindex');

            width: ef.get-value($themeDefault, 'bodyDecorWidth');
            background-repeat: ef.get-value($themeDefault, 'bodyBgRepeat');
        }
    }

    &__body-title {
        @include text.get-text-style(ef.get-value($themeDefault, 'bodyFont', 320), ef.get-value($themeDefault, 'bodyColor'));
        @include bm.lineClamp(1);

        margin: ef.get-value($themeDefault, 'bodyMargin');

        @include mq.min(768) {
            @include text.get-text-style(ef.get-value($themeDefault, 'bodyFont', 768), ef.get-value($themeDefault, 'bodyColor'));
        }
    }

    &__timer-block {
        margin: ef.get-value($themeDefault, 'timerBlockMargin');
    }

    &__description {
        @include text.get-text-style(ef.get-value($themeDefault, 'descriptionFont'), ef.get-value($themeDefault, 'descriptionColor'));
        @include bm.get-mq-map('max-width', $themeDefault, 'descriptionWidth');
        @include bm.get-mq-map('margin', $themeDefault, 'descriptionMargin');
        @include bm.lineClamp(3);
    }

    ::ng-deep {

        .wlc-icon {

            &-content {
                display: inline-block;
                line-height: 0;
            }
        }
    }

    .buttons-wrap {
        @include bm.get-mq-map('padding', $themeDefault, 'btnsWrapPadding');

        display: flex;
        justify-content: ef.get-value($themeDefault, 'btnsWrapAlign');

        margin: ef.get-value($themeDefault, 'btnsWrapMargin');


        & > .wlc-btn {
            grid-column-gap: ef.get-value($themeDefault, 'btnsGridColumnGap');

            min-width: ef.get-value($themeDefault, 'btnsMinWidth');

            margin: ef.get-value($themeDefault, 'btnsMargin');
            padding: ef.get-value($themeDefault, 'btnsPadding');

            &:last-child {
                margin-right: 0;
            }

            &--theme-mod-read {
                @include bm.get-mq-map('display', $themeDefault, 'btnsDisplay');
            }
        }
    }

    &__loader {
        position: absolute;
        top: ef.get-value($themeDefault, 'loaderPosition');
        right: ef.get-value($themeDefault, 'loaderPosition');
        bottom: ef.get-value($themeDefault, 'loaderPosition');
        left: ef.get-value($themeDefault, 'loaderPosition');
        z-index: ef.get-value($themeDefault, 'loaderZIndex');

        display: flex;
        align-items: ef.get-value($themeDefault, 'loaderAlignItems');
        justify-content: ef.get-value($themeDefault, 'loaderJustifyContent');

        border-radius: ef.get-value($themeDefault, 'loaderRadius');
        background: ef.get-value($themeDefault, 'loaderBachround');

        &:before {
            content: '';

            position: absolute;
            top: ef.get-value($themeDefault, 'loaderBeforePosition');
            right: ef.get-value($themeDefault, 'loaderBeforePosition');
            bottom: ef.get-value($themeDefault, 'loaderBeforePosition');
            left: ef.get-value($themeDefault, 'loaderBeforePosition');

            width: ef.get-value($themeDefault, 'loaderBeforeSize');
            height: ef.get-value($themeDefault, 'loaderBeforeSize');

            margin: ef.get-value($themeDefault, 'loaderBeforeMargin');

            background: ef.get-value($themeDefault, 'loaderBeforeBackground');

            border-radius: ef.get-value($themeDefault, 'loaderBeforeRadius');
        }

        &:after {
            content: '';

            width: ef.get-value($themeDefault, 'loaderAfterSize');
            height: ef.get-value($themeDefault, 'loaderAfterSize');

            border: 4px solid ef.get-value($themeDefault, 'loaderAfterBorderColor');
            border-left-color: transparent;
            border-radius: ef.get-value($themeDefault, 'loaderAfterRadius');
            animation: ef.get-value($themeDefault, 'loaderAfterAnimation');
        }
    }
}

@keyframes spin {

    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(360deg);
    }
}

